CHANGES.txt - 09/18/2005
------------------------

CHANGES IN CUPS V1.2.0b1

	- Added write buffering to the HTTP code to improve
	  performance (STR #547)
	- The scheduler now uses the attributes-natural-language
	  attribute to localize banner pages (STR #386)
	- The scheduler now returns the address that was used to
	  connect to it (STR #1076)
	- Fixed a problem with N-up printing and OpenOffice (STR
	  #576)
	- Added support for the GCC position independent
	  executable options (STR #1209)
	- Added new BrowseLocalProtocols and
	  BrowseRemoteProtocols directives to cupsd.conf,
	  allowing for different browse protocols for local and
	  remote printers (STR #877)
	- PPD files can now contain strings up to 256k in length
	  (STR #1215)
	- The pstops filter now supports the IncludeFeature DSC
	  comment (STR #1212)
	- The pstops filter now disables the setpagedevice
	  procedure when doing N-up printing (STR #1161)
	- The serial backend now supports "stop=1", "stop=2",
	  "parity=space", and "parity=mark" options (STR #1155)
	- "make install" no longer overwrites an existing PAM
	  configuration file (STR #1064)
	- The scheduler now closes all files on startup when run
	  in daemon mode (STR #1009)
	- Added a new RGBW colorspace to the CUPS raster format
	  (STR #1071)
	- The pdftops filter now sets the page size based on the
	  media box when not scaling the output (STR #912)
	- The pdftops filter now supports masked images (STR
	  #281)
	- The pdftops filter produced large output when rendering
	  PDF files containing lot of repeated images (STR #327)
	- The pdftops filter now minimizes print processing of
	  PDF files when using the page-ranges option (STR #273)
	- Updated pdftops filter to Xpdf 3.01.
	- Added new cupsBackchannelRead() and
	  cupsBackchannelWrite() functions, as well as
	  backchannel support to the parallel, serial, socket,
	  and USB backends (STR #1252)
	- The parallel and USB backends now treat a "no space