@@ -3,6 +3,8 @@ CHANGES.txt - 09/18/2005
 
 CHANGES IN CUPS V1.2.0b1
 
+	- Added "media" option support for EFI EFMediaType option
+	  (STR #902)
 	- Added write buffering to the HTTP code to improve
 	  performance (STR #547)
 	- The scheduler now uses the attributes-natural-language
